--- a/docs/style-guide/src/sass/partials/_footer.sass
+++ b/docs/style-guide/src/sass/partials/_footer.sass
@@ -3,7 +3,7 @@
 // ===========================================
 
 .footer
-	padding: var(--space-60) 0
+	padding: var(--space-32) 0
 	background-color: var(--ui-bg-default)
 	background-image: radial-gradient(circle, var(--ui-dot-pattern) 1px, transparent 1px)
 	background-size: 6px 6px
