--- a/docs/style-guide/src/sass/partials/_header.sass
+++ b/docs/style-guide/src/sass/partials/_header.sass
@@ -12,7 +12,6 @@
 	width: 100%
 	padding-inline: var(--grid-margin)
 	align-items: center
-	column-gap: var(--space-8)
 
 .wordmark
 	font-family: var(--font-mono)
