--- a/grid/_breakpoints.sass
+++ b/grid/_breakpoints.sass
@@ -56,8 +56,4 @@ $breakpoint-2xl: 1440px
 
 @include md
   \:root
-    --grid-margin: var(--space-40)
-
-@include xl
-  \:root
-    --grid-margin: var(--space-64)
+    --grid-margin: var(--space-24)
